# vox

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: config-reference.md  control-plane-spike.md  control-plane-verdicts.md  demo-script.md  dependency-graph.md  latency-spike.md  licenses.md  tuning-protocol.md  voicemode-notes.md
docs/tickets/: P0-01.md  P0-02.md  P0-03.md  P1-01.md  P1-02.md  P1-03.md  P1-04.md  P1-05.md  P1-06.md  P1-07.md  P2-01.md  P2-02.md  P2-03.md  P2-04.md  P3-01.md  P3-02.md
earshot/: __init__.py  api_fallback.py  cli.py  config.py  daemon.py  input.py  loop.py  openwakeword_resources.py  output.py
earshot/agents/: __init__.py  base.py  claude_code.py  codex.py  opencode.py  tmux_fallback.py
earshot/audio/: __init__.py  capture.py  endpointing.py  playback.py
earshot/barge/: __init__.py  interrupt.py  vad.py
earshot/conductor/: __init__.py  addressing.py  lifecycle.py  registry.py  router.py  status.py  watchers.py
earshot/speakable/: __init__.py  chunker.py  converter.py
earshot/stt/: __init__.py  api_openai.py  base.py  local_whisper.py
earshot/tts/: __init__.py  api_openai.py  base.py  local_piper.py
earshot/wakeword/: __init__.py  detector.py
spikes/: bench_stt.py  bench_tts.py  bench_vad.py  opencode_serve_spike.py  train_wakeword.py  tuning_sweep.py
spikes/models/: hey_earshot.onnx
tests/: fake_claude_code.py  fake_codex_appserver.py  fake_opencode_serve.py  fake_pane_agent.py  test_addressing.py  test_agents.py  test_api_backends.py  test_audio_capture.py  test_barge.py  test_conductor.py  test_config.py  test_daemon.py  test_harness_adapters.py  test_input_pipeline.py  test_openwakeword_resources.py  test_output_pipeline.py  test_speakable.py  test_tmux_fallback.py  test_tuning_sweep.py  test_voice_loop.py  test_watchers.py
