[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "earshot-cli"
version = "0.1.0"
description = "Voice-to-voice control for terminal coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "PyYAML>=6",
    "numpy>=1.24",
    "openwakeword>=0.6",
    "faster-whisper>=1.0",
    "sounddevice>=0.4",
    "piper-tts>=1.3",
    "markdown-it-py>=3",
    "scipy>=1.10",
]

[project.scripts]
earshot = "earshot.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "soundfile>=0.12",
]

[tool.setuptools.packages.find]
include = ["earshot*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
